@@ -23,6 +23,8 @@ import javax.validation.ConstraintValidatorContext;
 
 import org.apache.commons.beanutils.PropertyUtils;
 
+import com.esofthead.mycollab.core.utils.DateTimeUtils;
+
 /**
  * 
  * @author MyCollab Ltd.
@@ -43,16 +45,16 @@ public class DateComparisionValidator implements
 	@Override
 	public boolean isValid(Object value, ConstraintValidatorContext context) {
 		try {
-			Date firstDate = (Date) PropertyUtils.getProperty(value,
-					firstDateField);
-			Date lastDate = (Date) PropertyUtils.getProperty(value,
-					lastDateField);
+			Date firstDate = DateTimeUtils.trimHMSOfDate((Date) PropertyUtils
+					.getProperty(value, firstDateField));
+			Date lastDate = DateTimeUtils.trimHMSOfDate((Date) PropertyUtils
+					.getProperty(value, lastDateField));
 
 			if (firstDate == null || lastDate == null) {
 				return true;
 			} else {
 
-				return (firstDate.compareTo(lastDate) == 1) ? false : true;
+				return (firstDate.compareTo(lastDate) > 0) ? false : true;
 			}
 		} catch (Exception ex) {
 			return true;
